<resources>
    <string name="app_name">Horizontal</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_example_number_title">Item %02d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="practice_goods_fragment_title">商品详情</string>
    <string name="practice_goods_fragment_description">商品详情幻灯片左右刷新拖动</string>
    <string name="practice_goods_rad_goods">商品</string>
    <string name="practice_goods_rad_detail">详情</string>
    <string name="practice_goods_rad_comment">评论</string>
    <string name="practice_goods_collect">收藏</string>
    <string name="practice_goods_store">店铺</string>
    <string name="practice_goods_service">客服</string>
    <string name="practice_goods_buy">立即购买</string>
    <string name="practice_goods_trolley">加入购物车</string>

    <string name="practice_pager2_fragment_title">ViewPager2</string>
    <string name="practice_pager_fragment_title">页面切换</string>
    <string name="practice_pager_fragment_description">页面切换左右刷新拖动</string>
    <string name="practice_pager_pager_title_1">Index 1</string>
    <string name="practice_pager_pager_title_2">Index 2</string>
    <string name="practice_pager_pager_title_3">Index 3</string>

    <string name="example_basic_fragment_title">加载更多</string>
    <string name="example_basic_fragment_description">左边刷新右边加载更多</string>

    <string name="footer_detail_horizontal_pulling">滑动查看图文详情</string>
    <string name="footer_detail_horizontal_release">释放查看图文详情</string>

</resources>
