<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".fragment.PracticePager2Fragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
                style="@style/AppTheme.Toolbar"
                android:id="@id/toolbar"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/practice_pager_fragment_title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smartrefresh.horizontal.SmartRefreshHorizontal
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableOverScrollBounce="false">
        <com.scwang.smartrefresh.horizontal.HorizontalHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <!-- 使用 HorizontalHeader 套住可以保证里面的 View 不被 90度旋转 -->
            <ImageView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/loading_rabbit"/>
        </com.scwang.smartrefresh.horizontal.HorizontalHeader>
        <com.scwang.smartrefresh.horizontal.demo.widget.SmartViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_1"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover2"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_2"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover3"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_3"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </com.scwang.smartrefresh.horizontal.demo.widget.SmartViewPager2>
    </com.scwang.smartrefresh.horizontal.SmartRefreshHorizontal>

</LinearLayout>