<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
              android:background="@color/colorPrimary"
              tools:context="com.scwang.smart.refresh.horizontal.demo.fragment.PracticePagerFragment">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
                style="@style/AppTheme.Toolbar"
                android:id="@id/toolbar"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/practice_pager_fragment_title"/>
    </android.support.design.widget.AppBarLayout>

    <com.scwang.smart.refresh.horizontal.SmartRefreshHorizontal
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:srlEnableOverScrollBounce="false">
        <com.scwang.smart.refresh.horizontal.HorizontalHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false">
            <!-- 使用 HorizontalHeader 套住可以保证里面的 View 不被 90度旋转 -->
            <ImageView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/loading_rabbit"/>
        </com.scwang.smart.refresh.horizontal.HorizontalHeader>
        <com.scwang.smart.refresh.horizontal.demo.widget.SmartViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_1"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover2"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_2"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="40dp"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardUseCompatPadding="true">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/card_cover3"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/practice_pager_pager_title_3"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>
        </com.scwang.smart.refresh.horizontal.demo.widget.SmartViewPager>
    </com.scwang.smart.refresh.horizontal.SmartRefreshHorizontal>

</LinearLayout>